Eliminado calendar holidays

--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -14,9 +14,20 @@
           <tr>
             <th>
               Zona horaria
-              <aw-tooltip-info content="Prueba de tooltip" cssClass="text-info"></aw-tooltip-info>
+              <aw-tooltip-info content="Zona horaria de la compañía" cssClass="text-info"></aw-tooltip-info>
             </th>
             <td>{{ companySettings()?.timezone }} - {{ nowWithTimezone }}</td>
+          </tr>
+          <tr>
+            <th>
+              Días laborables
+              <aw-tooltip-info
+                content="Días por defecto considerados laborables"
+                cssClass="text-info"></aw-tooltip-info>
+            </th>
+            <td>
+              <aw-working-days-week />
+            </td>
           </tr>
         }
         <!-- end details -->
