--- a/src/app/components/year-calendar/year-calendar.component.html
+++ b/src/app/components/year-calendar/year-calendar.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-wrap justify-content-center">
   @for (date of monthsInYear; track date) {
-    <aw-month-calendar [date]="date" [calendarDayEvents]="calendarDays" />
+    <aw-month-calendar [date]="date" [calendarDayEvents]="calendarDayEvents" />
   }
 </div>
