--- a/src/app/components/progress/time-control-progress/time-control-progress.component.html
+++ b/src/app/components/progress/time-control-progress/time-control-progress.component.html
@@ -1,7 +1,7 @@
 <!-- times -->
 @if (!loading) {
   @for (progressStacked of progressStackedCollection; track progressStacked) {
-    <aw-progress-stacked [progressStackedCollection]="progressStacked" />
+    <aw-progress-stacked [progressStackedCollection]="progressStacked" (clickProgress)="handleClickProgress($event)" />
   }
 } @else {
   <aw-spinner [loading]="loading" [size]="100" />
