--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -8,7 +8,7 @@
 
     <table class="table table-striped table-borderless">
       <caption></caption>
-      <thead>
+      <tbody>
         <!-- details -->
         @if (!loadingCompanySettings()) {
           <tr>
@@ -35,7 +35,7 @@
         <!-- spinner -->
         <aw-table-loading [loading]="loadingCompanySettings()"></aw-table-loading>
         <!-- end spinner -->
-      </thead>
+      </tbody>
     </table>
   </aw-card>
 </aw-view-base>
