Eliminado class css text-center

--- a/src/app/components/tables/table-loading/table-loading.component.html
+++ b/src/app/components/tables/table-loading/table-loading.component.html
@@ -1,9 +1,7 @@
-<!-- spinner -->
 @if (loading) {
   <tr>
-    <td class="text-center" colspan="100%">
+    <td colspan="100%">
       <aw-spinner [loading]="loading" [size]="100" />
     </td>
   </tr>
 }
-<!-- end spinner -->
