--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -91,16 +91,22 @@
                 }
 
                 @if (timeControl.duration === 0) {
-                  ...
+                  <span>...</span>
                 }
               </td>
               <td>
                 <span class="d-flex justify-content-end btn-actions">
+                  <span
+                    (click)="handleDetailsTimeControl(timeControl)"
+                    awTooltip
+                    class="fa-solid fa-eye cursor-pointer text-info"
+                    title="Detalles"></span>
+
                   @if (timeControl.timeState === timeState.close) {
                     <span
                       (click)="handleTimeControlUpdate(timeControl)"
                       awTooltip
-                      class="fa-solid fa-pencil cursor-pointer"
+                      class="fa-solid fa-pencil text-success cursor-pointer ms-2"
                       title="Editar"></span>
 
                     <span
@@ -114,7 +120,7 @@
                     <span
                       (click)="handleCloseTimeControl(timeControl)"
                       awTooltip
-                      class="fa-solid fa-lock cursor-pointer text-danger"
+                      class="fa-solid fa-lock cursor-pointer text-danger ms-2"
                       title="Cerrar"></span>
                   }
                 </span>
