--- a/src/app/views/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/views/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -1,3 +1,3 @@
 <aw-view-base>
-  <aw-view-header>Detalles de tiempo</aw-view-header>
+  <aw-view-header [breadcrumb]="breadcrumb">Detalles de tiempo</aw-view-header>
 </aw-view-base>
