Mostrar si tiene incidencias en lista de tiempos de control

--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -95,6 +95,13 @@
                 }
               </td>
               <td>
+                @if (timeControl.incidence) {
+                  <span class="fa-solid fa-triangle-exclamation text-danger"></span>
+                } @else {
+                  <span>&nbsp;</span>
+                }
+              </td>
+              <td>
                 <span class="d-flex justify-content-end btn-actions">
                   <span
                     (click)="handleDetailsTimeControl(timeControl)"
