Centrado con flex form login y registro

--- a/src/app/views/accounts/recovery-password/recovery-password.component.scss
+++ b/src/app/views/accounts/recovery-password/recovery-password.component.scss
@@ -1,4 +1,10 @@
+@import "variables";
+
 .form-recovery-password {
   max-width: 530px;
-  padding: 20px;
+}
+
+.recovery-password-container {
+  height: calc(100vh);
+  margin-top: -$navbar-margin-top; // Restar el margin top.
 }
