--- a/src/app/views/accounts/register/register.component.html
+++ b/src/app/views/accounts/register/register.component.html
@@ -1,103 +1,105 @@
 <aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
-  <div class="form-register w-100 m-auto">
-    <aw-card extraCss="p-4">
-      <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-        <h1 class="h3 mb-3 fw-normal"><span class="fa-regular fa-building"></span> Nuevo registro</h1>
-        <hr />
+  <div class="d-flex align-items-center justify-content-center register-container">
+    <div class="form-register w-100">
+      <aw-card extraCss="p-4">
+        <form (ngSubmit)="handleSubmit()" [formGroup]="form">
+          <h1 class="h3 mb-3 fw-normal"><span class="fa-regular fa-building"></span> Nuevo registro</h1>
+          <hr />
 
-        <aw-non-field-errors [badRequest]="badRequest" />
+          <aw-non-field-errors [badRequest]="badRequest" />
 
-        <!-- firstName -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [submitted]="submitted"
-            fieldName="firstName"
-            formControlName="firstName"
-            label="Nombre" />
-        </div>
-        <!-- end firstName -->
+          <!-- firstName -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="firstName"
+              formControlName="firstName"
+              label="Nombre" />
+          </div>
+          <!-- end firstName -->
 
-        <!-- lastName -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [submitted]="submitted"
-            fieldName="lastName"
-            formControlName="lastName"
-            label="Apellidos" />
-        </div>
-        <!-- end lastName -->
+          <!-- lastName -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="lastName"
+              formControlName="lastName"
+              label="Apellidos" />
+          </div>
+          <!-- end lastName -->
 
-        <!-- email -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [inputType]="formInputTypes.email"
-            [submitted]="submitted"
-            fieldName="email"
-            formControlName="email"
-            label="Correo electrónico" />
-        </div>
-        <!-- end email -->
+          <!-- email -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [inputType]="formInputTypes.email"
+              [submitted]="submitted"
+              fieldName="email"
+              formControlName="email"
+              label="Correo electrónico" />
+          </div>
+          <!-- end email -->
 
-        <!-- password -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [inputType]="formInputTypes.password"
-            [submitted]="submitted"
-            fieldName="password"
-            formControlName="password"
-            label="Contraseña" />
-        </div>
-        <!-- end password -->
+          <!-- password -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [inputType]="formInputTypes.password"
+              [submitted]="submitted"
+              fieldName="password"
+              formControlName="password"
+              label="Contraseña" />
+          </div>
+          <!-- end password -->
 
-        <!-- confirmPassword -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [inputType]="formInputTypes.password"
-            [submitted]="submitted"
-            fieldName="confirmPassword"
-            formControlName="confirmPassword"
-            label="Confirmar contraseña" />
-        </div>
-        <!-- end confirmPassword -->
+          <!-- confirmPassword -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [inputType]="formInputTypes.password"
+              [submitted]="submitted"
+              fieldName="confirmPassword"
+              formControlName="confirmPassword"
+              label="Confirmar contraseña" />
+          </div>
+          <!-- end confirmPassword -->
 
-        <!-- companyName -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [submitted]="submitted"
-            fieldName="companyName"
-            formControlName="companyName"
-            label="Nombre de empresa" />
-        </div>
-        <!-- end companyName -->
+          <!-- companyName -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="companyName"
+              formControlName="companyName"
+              label="Nombre de empresa" />
+          </div>
+          <!-- end companyName -->
 
-        <!-- timezone -->
-        <div class="mb-2">
-          <aw-form-timezone
-            [badRequest]="badRequest"
-            [form]="form"
-            [submitted]="submitted"
-            fieldName="timezone"
-            formControlName="timezone"
-            label="Zona horaria" />
-        </div>
-        <!-- end timezone -->
+          <!-- timezone -->
+          <div class="mb-2">
+            <aw-form-timezone
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="timezone"
+              formControlName="timezone"
+              label="Zona horaria" />
+          </div>
+          <!-- end timezone -->
 
-        <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
+          <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
 
-        <aw-btn-loading [loading]="loading" btnClass="w-100 btn btn-lg btn-primary mt-2" btnText="Registrar" />
-      </form>
-    </aw-card>
+          <aw-btn-loading [loading]="loading" btnClass="w-100 btn btn-lg btn-primary mt-2" btnText="Registrar" />
+        </form>
+      </aw-card>
+    </div>
   </div>
 </aw-view-base>
