--- a/src/app/components/progress/progress-stacked/progress-stacked.component.html
+++ b/src/app/components/progress/progress-stacked/progress-stacked.component.html
@@ -10,7 +10,7 @@
       [attr.aria-valuemin]="item.valueMin"
       [attr.aria-valuenow]="item.valueNow"
       [ngStyle]="{ width: item.percent + '%' }"
-      aria-label="Segment one"
+      aria-label="Time control"
       class="progress cursor-pointer"
       role="progressbar">
       <div [ngClass]="item.background" [title]="item.tooltip" awTooltip class="progress-bar">
