--- a/src/app/views/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/views/accounts/recovery-password/recovery-password.component.html
@@ -1,38 +1,40 @@
 <aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
-  <div class="form-recovery-password w-100 m-auto mt-5">
-    <aw-card extraCss="p-4">
-      <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-        <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-lock"></span> Recuperar contraseña</h1>
-        <hr />
+  <div class="d-flex align-items-center justify-content-center recovery-password-container">
+    <div class="form-recovery-password w-100">
+      <aw-card extraCss="p-4">
+        <form (ngSubmit)="handleSubmit()" [formGroup]="form">
+          <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-lock"></span> Recuperar contraseña</h1>
+          <hr />
 
-        <aw-non-field-errors [badRequest]="badRequest" />
+          <aw-non-field-errors [badRequest]="badRequest" />
 
-        @if (hasResponse) {
-          <div class="alert alert-success">
-            Se ha enviado un correo para restablecer la contraseña. Siga las indicaciones desde su correo.
+          @if (hasResponse) {
+            <div class="alert alert-success">
+              Se ha enviado un correo para restablecer la contraseña. Siga las indicaciones desde su correo.
+            </div>
+          }
+
+          <!-- email -->
+          <div class="mb-2">
+            <aw-form-floating
+              [badRequest]="badRequest"
+              [form]="form"
+              [inputType]="formInputTypes.email"
+              [submitted]="submitted"
+              fieldName="email"
+              formControlName="email"
+              label="Correo electrónico" />
           </div>
-        }
+          <!-- end email -->
 
-        <!-- email -->
-        <div class="mb-2">
-          <aw-form-floating
-            [badRequest]="badRequest"
-            [form]="form"
-            [inputType]="formInputTypes.email"
-            [submitted]="submitted"
-            fieldName="email"
-            formControlName="email"
-            label="Correo electrónico" />
-        </div>
-        <!-- end email -->
+          <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
 
-        <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
-
-        <aw-btn-loading
-          [loading]="loading"
-          btnClass="w-100 btn btn-lg btn-primary mt-2"
-          btnText="Recuperar contraseña" />
-      </form>
-    </aw-card>
+          <aw-btn-loading
+            [loading]="loading"
+            btnClass="w-100 btn btn-lg btn-primary mt-2"
+            btnText="Recuperar contraseña" />
+        </form>
+      </aw-card>
+    </div>
   </div>
 </aw-view-base>
