--- a/src/app/components/views/view-base/view-base.component.html
+++ b/src/app/components/views/view-base/view-base.component.html
@@ -4,9 +4,9 @@
 }
 <!-- end title -->
 
-<div [ngClass]="{ toggled: !sidebarState$() }" class="page-wrapper">
+<div [ngClass]="{ toggled: !sidebarMenuState$() }" class="page-wrapper">
   <!-- sidebar -->
-  @if (sidebarState$()) {
+  @if (sidebarMenuState$()) {
     <aw-sidebar />
   }
   <!-- end sidebar -->
