Renombrado Sidebar a SidebarMenu

--- a/src/app/views/accounts/register-success/register-success.component.html
+++ b/src/app/views/accounts/register-success/register-success.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false" cssContent="container">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false" cssContent="container">
   <div class="row">
     <div class="col-lg-6 m-auto">
       <div class="alert alert-success mt-4">
