--- a/src/app/views/accounts/register/register.component.html
+++ b/src/app/views/accounts/register/register.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false">
   <div class="d-flex align-items-center justify-content-center register-container">
     <div class="form-register w-100">
       <aw-card extraCss="p-4">
