--- a/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false">
   <div class="form-recovery-password-change w-100 m-auto mt-5">
     <aw-card extraCss="p-4">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
