--- a/src/app/views/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/views/accounts/recovery-password/recovery-password.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false">
   <div class="d-flex align-items-center justify-content-center recovery-password-container">
     <div class="form-recovery-password w-100">
       <aw-card extraCss="p-4">
