--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarMenuState]="false">
   <div class="d-flex align-items-center justify-content-center login-container">
     <div class="form-login w-100">
       <aw-card extraCss="p-4">
