--- a/src/app/views/errors/error403/error403.component.html
+++ b/src/app/views/errors/error403/error403.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [navbarState]="false" [sidebarState]="false" [footerState]="false">
+<aw-view-base [navbarState]="false" [sidebarMenuState]="false" [footerState]="false">
   <aw-card>
     <div class="row">
       <div class="m-auto">
