--- a/src/app/views/time-control-records/time-control-record-update/time-control-record-update.component.html
+++ b/src/app/views/time-control-records/time-control-record-update/time-control-record-update.component.html
@@ -3,6 +3,13 @@
 
   <aw-card>
     @if (timeControl) {
+      @if (timeControl.incidence) {
+        <div>
+          <h6>Tiempo con incidencia</h6>
+          <div class="alert alert-danger">{{ timeControl.incidenceDescription }}</div>
+        </div>
+      }
+
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
         <div class="mb-2 row">
           <!-- timeStart -->
@@ -48,6 +55,22 @@
               label="" />
           </div>
           <!-- end timeFinish -->
+
+          <!-- closeIncidence -->
+          @if (timeControl.incidence) {
+            <div class="row mt-2">
+              <div class="col">
+                <aw-form-checkbox
+                  [badRequest]="badRequest"
+                  [form]="form"
+                  [submitted]="submitted"
+                  fieldName="closeIncidence"
+                  formControlName="closeIncidence"
+                  label="Cerrar incidencia" />
+              </div>
+            </div>
+          }
+          <!-- end closeIncidence -->
 
           <div class="mt-3 col-12">
             <aw-btn-back />
