--- a/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
@@ -4,7 +4,7 @@
     <h5 class="modal-title">
       Roles - <small class="text-mutted">{{ fullName }}</small>
     </h5>
-    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+    <button (click)="handleClose()" aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
   </div>
   <!-- end header -->
 
