--- a/src/app/views/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/views/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -102,7 +102,7 @@
       @if (timeControl) {
         @if (timeControl.timeState === timeState.open) {
           <button (click)="handleTimeControlClose(timeControl)" class="btn btn-warning ms-2">
-            <span class="fa-solid fa-lock"></span> Cerrar
+            <span class="fa-solid fa-lock"></span> Finalizar
           </button>
         } @else {
           <button (click)="handleTimeControlUpdate(timeControl)" class="btn btn-success ms-2">
