Fix disable field

--- a/src/app/components/forms/inputs/form-datepicker/form-datepicker.component.html
+++ b/src/app/components/forms/inputs/form-datepicker/form-datepicker.component.html
@@ -10,6 +10,7 @@
     [(ngModel)]="value"
     [bsConfig]="bsConfig"
     [isDisabled]="isDisabled"
+    [disabled]="isDisabled"
     [ngClass]="{ extraCss: true, 'is-invalid': isInvalid() }"
     [placeholder]="placeholder"
     [type]="inputType"
