Anadidos enlaces a detalles al seleccionar un progress

--- a/src/app/views/employees/employee-view/employee-time-control-progress/employee-time-control-progress.component.html
+++ b/src/app/views/employees/employee-view/employee-time-control-progress/employee-time-control-progress.component.html
@@ -12,6 +12,9 @@
 
 <!-- times -->
 <div>
-  <aw-time-control-progress [loading]="loadingTimeControls" [progressStackedCollection]="progressStackedCollection" />
+  <aw-time-control-progress
+    (clickProgress)="handleClickProgress($event)"
+    [loading]="loadingTimeControls"
+    [progressStackedCollection]="progressStackedCollection" />
   <!-- end times -->
 </div>
