--- a/src/app/views/time-control-records/time-control-record-create/time-control-record-create.component.html
+++ b/src/app/views/time-control-records/time-control-record-create/time-control-record-create.component.html
@@ -14,7 +14,7 @@
     <aw-card>
       <div class="row">
         <div class="col text-center">
-          <button (click)="handleSelectEmployee()" class="btn btn-outline-primary">Buscar empleado</button>
+          <button (click)="handleSelectEmployee()" class="btn btn-outline-primary">Seleccionar empleado</button>
         </div>
       </div>
 
