--- a/src/app/views/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/views/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -18,7 +18,11 @@
         @if (timeControl && !loadingTimeControl) {
           <tr>
             <td>Empleado</td>
-            <td>{{ timeControl.firstName }} {{ timeControl.lastName }}</td>
+            <td>
+              <span (click)="handleNavigateToEmployee(timeControl.userId)" class="navigate-employee">
+                {{ timeControl.firstName }} {{ timeControl.lastName }}
+              </span>
+            </td>
           </tr>
           <tr>
             <td>Hora de inicio</td>
