--- a/src/app/views/time-control-records/time-control-record-update/time-control-record-update.component.html
+++ b/src/app/views/time-control-records/time-control-record-update/time-control-record-update.component.html
@@ -6,7 +6,7 @@
       @if (timeControl.incidence) {
         <div>
           <h6>Tiempo con incidencia</h6>
-          <div class="alert alert-danger">{{ timeControl.incidenceDescription }}</div>
+          <div class="alert alert-warning nl2br">{{ timeControl.incidenceDescription }}</div>
         </div>
       }
 
