--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -6,7 +6,7 @@
       <span class="fa-solid fa-pencil"></span> Editar
     </a>
 
-    <table class="table table-striped table-borderless">
+    <table class="table table-striped table-borderless table-hover">
       <caption></caption>
       <tbody>
         <!-- details -->
